# nitrokey-fido-u2f-firmware

./: .travis.yml  70-u2f.rules  LICENSE.txt  README.md  install_rules.sh
doc/: atecc_configuration.md  keys_usage-u2f_authentication.dia  keys_usage-u2f_registration.dia  security_architecture.md  u2f-authentication.dia  u2f-registration.dia
doc/atecc/: atecc_configuration.md  slot_config.txt
doc/images/: keys_usage-configuration.dia  keys_usage-u2f_authentication.dia  keys_usage-u2f_registration.dia
firmware/: .cproject  .project  CMakeLists.txt  SETUP.hex  SETUP_CAFEBABEFFFFFFF0.hex  SETUP_CAFEBABEFFFFFFF1.hex  SETUP_CAFEBABEFFFFFFF2.hex  u2f-firmware.hwconf
firmware/CMake/: Generic-SDCC-C.cmake
firmware/inc/: InitDevice.h  app.h  atecc508a.h  bsp.h  descriptors.h  eeprom.h  gpio.h  u2f.h  u2f_hid.h
firmware/inc/config/: usbconfig.h
firmware/release/: u2f-firmware.hex
firmware/src/: InitDevice.c  Interrupts.c  atecc508a.c  atecc_configuration.c  bsp.c  callback.c  cert.c  custom.c  descriptors.c  eeprom.c  gpio.c  i2c.c  lockbyte.c  main.c  u2f.c  u2f_atecc.c  u2f_hid.c
tools/: rkey  setup_device.sh  wkey
tools/gencert/ca/: cert.der  key.pem
tools/u2f_zero_client/: client.py  setup.sh
